--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -81,7 +81,7 @@ bind _ split-window -h
 
 #------TMUX PLUGINS------#
 # List of Plugins
-set -g @plugin 'tmux-plugins/tmp'
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-logging'
 
