--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -1,18 +1,18 @@
 font:
   normal:
-    family: firacode 
+    family: Fira Code Nerd Font
     style: Regular
 
   bold:
-    family: firacode
+    family: Fira Code Nerd Font
     style: Bold
 
   italic:
-    family: firacode
+    family: Fira Code Nerd Font
     style: Italic
 
   bold_italic:
-    family: firacode
+    family: Fira Code Nerd Font
     style: Bold Italic
 
   size: 11
